Opened 15 years ago

Closed 19 months ago

#4711 closed bug (fixed)

[Icon-O-Matic] application window can't be resized to smaller dimention

Reported by: mpanasyuk Owned by: stippi
Priority: normal Milestone: R1/beta5
Component: Applications/Icon-O-Matic Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

When some style is selected application window can't be resized to dimention smaller than it was before style was selected.

Haiku R1/alpha1 (Revision 32975)

Change History (3)

comment:1 by mpanasyuk, 15 years ago

Component: - GeneralApplications/Icon-O-Matic
Owner: changed from nobody to stippi

comment:2 by pulkomandy, 10 years ago

Still here in hrev48340.

comment:3 by waddlesplash, 19 months ago

Milestone: R1R1/beta5
Resolution: fixed
Status: newclosed

Fixed in hrev57218.

Note: See TracTickets for help on using tickets.