Icon-O-Matic: Fix window resizing bug

Previously, the window could not go any smaller than the current size
after some changes were made to the icon such as adding a style.

Fixes #4711

Also cleans up some code style.

Change-Id: I4e7af98ac8afbea28a46d81b9de7aba6fc6c894a
Reviewed-on: https://review.haiku-os.org/c/haiku/+/6836
Reviewed-by: Adrien Destugues <pulkomandy@pulkomandy.tk>
Reviewed-by: humdinger humdinger <humdinger@mailbox.org>
Tested-by: Commit checker robot <no-reply+buildbot@haiku-os.org>