src/apps/icon-o-matic/gui/GradientControl.h
@@ -1,9 +1,10 @@
 /*
- * Copyright 2006-2007, Haiku.
+ * Copyright 2006-2007, 2023, Haiku.
  * Distributed under the terms of the MIT License.
  *
  * Authors:
  *		Stephan Aßmus <superstippi@gmx.de>
+ *		Zardshard
  */
 #ifndef GRADIENT_CONTROL_H
 #define GRADIENT_CONTROL_H
@@ -58,6 +59,8 @@ class GradientControl :
 
 	virtual	void				Draw(BRect updateRect);
 	virtual	void				FrameResized(float width, float height);
+
+	virtual	void				GetPreferredSize(float* width, float* height);
 
 								// GradientControl
 			void				SetGradient(const _ICON_NAMESPACE Gradient*
